Add JWT filter with role-based authorization and corresponding tests
- Implement JwtAuthenticationFilter to set user roles in security context
- Configure SecurityConfig to restrict access by roles (MODERATOR, TEACHER, STUDENT)
- Add integration tests to verify endpoint access for different roles